# auto-gmail-uploader

./: .gitignore  GEMINI.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.steering/20260228-upload-gmails-to-gdrive/: design.md  requirements.md  tasklist.md
configs/: newsletters.yaml
docs/ideas/20260228-upload-gmails-to-gdrive/: initial-requirements.md
docs/setup/: README.md  gcp-manual-setup.md
infra/: .terraform.lock.hcl  main.tf  secrets.tf  variables.tf
scripts/: get_refresh_token.py  update_secrets.py
src/: config.py  converter.py  drive_client.py  gmail_client.py  main.py  notifier.py
tests/: test_converter.py  test_drive_client.py  test_gmail_client.py  test_main.py  test_notifier.py
